# benchmark_action

./: CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: semantic_release.yml
benchmark_action/: __init__.py
examples/: bec-widgets-benchmark.yml  setup_bec_widgets_env.sh
scripts/: aggregate_benchmarks.py  compare_benchmarks.py  publish_benchmark_data.sh  run_benchmarks.sh
